--- a/FoodCollector/Settings.storyboard
+++ b/FoodCollector/Settings.storyboard
@@ -348,10 +348,10 @@
             </objects>
             <point key="canvasLocation" x="1414.5" y="585.5"/>
         </scene>
-        <!--View Controller-->
+        <!--User ProfileTVC-->
         <scene sceneID="cjz-9c-RgK">
             <objects>
-                <viewController id="DeX-g5-rgA" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UserProfileTVC" id="DeX-g5-rgA" customClass="UserProfileTVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5Yb-BT-gp0"/>
                         <viewControllerLayoutGuide type="bottom" id="Rc7-7X-ehA"/>
@@ -359,13 +359,88 @@
                     <view key="view" contentMode="scaleToFill" id="fVV-sw-a3e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lfu-Ao-ZK6">
+                                <rect key="frame" x="-4" y="64" width="383" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="userProfilePhotoCell" rowHeight="120" id="fvS-ZW-d4n" customClass="UserProfilePhotoCell" customModule="FoodCollector" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="383" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fvS-ZW-d4n" id="nqh-bf-POD">
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="119"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKP-Yv-fG7">
+                                                    <rect key="frame" x="15" y="10" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="2p8-tf-Oug"/>
+                                                        <constraint firstAttribute="width" constant="80" id="PUQ-1Q-l5x"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mua-e4-tjH">
+                                                    <rect key="frame" x="32" y="89" width="46" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="46" id="AAa-sj-aEe"/>
+                                                        <constraint firstAttribute="height" constant="30" id="u8Q-nW-UXC"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Edit"/>
+                                                    <connections>
+                                                        <action selector="editPhotoAction:" destination="fvS-ZW-d4n" eventType="touchUpInside" id="zAG-LL-wzg"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit your profile picture or your personal data" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c04-67-170">
+                                                    <rect key="frame" x="136" y="29" width="192" height="41"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mua-e4-tjH" firstAttribute="centerX" secondItem="fKP-Yv-fG7" secondAttribute="centerX" id="Ij2-Bu-1HK"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="c04-67-170" secondAttribute="trailing" constant="47" id="Kox-wH-Kjf"/>
+                                                <constraint firstItem="c04-67-170" firstAttribute="top" secondItem="nqh-bf-POD" secondAttribute="topMargin" constant="9" id="ZAb-FC-B9y"/>
+                                                <constraint firstItem="c04-67-170" firstAttribute="leading" secondItem="fKP-Yv-fG7" secondAttribute="trailing" constant="41" id="b1W-iQ-KvB"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="mua-e4-tjH" secondAttribute="bottom" constant="-8" id="b8q-dj-xZr"/>
+                                                <constraint firstItem="c04-67-170" firstAttribute="centerY" secondItem="nqh-bf-POD" secondAttribute="centerY" constant="-10" id="jCH-Qs-rvG"/>
+                                                <constraint firstItem="fKP-Yv-fG7" firstAttribute="leading" secondItem="nqh-bf-POD" secondAttribute="leadingMargin" constant="7" id="q4i-NU-Dz1"/>
+                                                <constraint firstItem="fKP-Yv-fG7" firstAttribute="top" secondItem="nqh-bf-POD" secondAttribute="topMargin" constant="2" id="tih-Jr-fK6"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="ZAb-FC-B9y"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="editPhotoButton" destination="mua-e4-tjH" id="L59-MM-3mw"/>
+                                            <outlet property="photoImageView" destination="fKP-Yv-fG7" id="kld-8j-7mp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="DeX-g5-rgA" id="oN7-Ak-Wyz"/>
+                                    <outlet property="delegate" destination="DeX-g5-rgA" id="enw-n8-RcT"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lfu-Ao-ZK6" firstAttribute="leading" secondItem="fVV-sw-a3e" secondAttribute="leadingMargin" constant="-20" id="95W-ud-8wA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lfu-Ao-ZK6" secondAttribute="trailing" constant="-20" id="WXy-Nh-T1i"/>
+                            <constraint firstItem="lfu-Ao-ZK6" firstAttribute="top" secondItem="5Yb-BT-gp0" secondAttribute="bottom" id="a2b-8s-wl0"/>
+                            <constraint firstItem="Rc7-7X-ehA" firstAttribute="top" secondItem="lfu-Ao-ZK6" secondAttribute="bottom" id="geN-3a-Sh0"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="IVq-i0-wJM"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="lfu-Ao-ZK6" id="WhO-nZ-dc9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9dc-1n-Rlw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1414.5" y="1359.5"/>
+            <point key="canvasLocation" x="1414.5" y="1350.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Uq4-f0-T6b">
@@ -385,6 +460,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E3K-Zd-Csv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="460.5" y="585.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YPM-BN-wPq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pyb-jd-PKI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GS7-G0-Mj9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="DeX-g5-rgA" kind="relationship" relationship="rootViewController" id="lIM-Uh-daj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ptp-jv-dgB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="911.5" y="1350.5"/>
         </scene>
     </scenes>
 </document>
